Bug 550889 - Don't pass negative values to SetComputedWidth/Height in nsFrame::BoxReflow. r=bzbarsky